optimize: 补全注释